--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
   height: 100vh;
   width: min-content;
   margin: 0 auto;
-  user-select: none;
+  overflow: hidden;
 }
 
 .game-header {
@@ -66,6 +66,7 @@ body {
   padding: var(--cell-gap);
   border-radius: 1vmin;
   font-size: calc(var(--cell-size) / 3.5);
+  user-select: none;
 }
 
 .cell {
@@ -100,5 +101,11 @@ body {
   0% {
     opacity: 0;
     transform: scale(0);
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  body {
+    height: 85vh;
   }
 }
